fix modal sizing on mobile

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -15,11 +15,10 @@
     z-index: 500;
     min-width: 60%;
     max-width: 90%;
-    left: 50%;
-    top: 10%;
+    left: 5%;
+    top: 50%;
     max-height: 80%;
-    /* bottom: 10%; */
-    transform: translateX(-50%);
+    transform: translateY(-50%);
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
     padding: 10px 10px 20px 10px;
